--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["kademlia"]
+dependencies = [
+    "aiohttp>=3.11.18",
+    "ipykernel>=6.29.5",
+    "kademlia",
+    "matplotlib>=3.10.1",
+    "torch>=2.6.0",
+    "wandb>=0.19.9",
+]
