--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.11.18",
+    "heapdict>=1.0.1",
     "ipykernel>=6.29.5",
     "kademlia",
     "matplotlib>=3.10.1",
