--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "kademlia",
     "matplotlib>=3.10.1",
     "torch>=2.6.0",
+    "transformers>=4.52.4",
     "wandb>=0.19.9",
 ]
