--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,22 @@ name = "inferd"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.7.0",
     "aiohttp>=3.11.18",
+    "git-lfs>=1.6",
+    "grpcio>=1.72.1",
+    "grpcio-tools>=1.72.1",
     "heapdict>=1.0.1",
+    "huggingface-hub>=0.32.4",
     "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.7",
     "kademlia",
     "matplotlib>=3.10.1",
+    "packaging>=25.0",
+    "protobuf>=6.31.1",
+    "safetensors>=0.5.3",
     "torch>=2.6.0",
     "transformers>=4.52.4",
     "wandb>=0.19.9",
