--- a/petals/inferd.yaml
+++ b/petals/inferd.yaml
@@ -1,9 +1,7 @@
-# inferd.yaml — упрощённый конфиг для разделённого инференса Qwen2
 model_name: Qwen/Qwen2-0.5B
 parts_dir: ./model_parts
-stages: 6
+stages_count: 3
 
-# Описание стадий в порядке выполнения
 stages:
   - name: node0
     stage: 0
@@ -13,28 +11,16 @@ stages:
   - name: node1
     stage: 1
     start_layer: 3
-    end_layer: 4
+    end_layer: 20
 
   - name: node2
     stage: 2
-    start_layer: 5
+    start_layer: 21
     end_layer: 23
 
   - name: node3
     stage: 2
-    start_layer: 5
+    start_layer: 21
     end_layer: 23
-
-  - name: node4
-    stage: 2
-    start_layer: 5
-    end_layer: 23
-
-  - name: node5
-    stage: 2
-    start_layer: 5
-    end_layer: 23
-
-
 
     
