--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "packaging>=25.0",
     "protobuf>=6.31.1",
+    "pytest>=8.4.0",
     "safetensors>=0.5.3",
     "torch>=2.6.0",
     "transformers>=4.52.4",
