--- a/petals/inferd.yaml
+++ b/petals/inferd.yaml
@@ -3,24 +3,24 @@ parts_dir: ./model_parts
 stages_count: 3
 
 stages:
-  - name: node0
-    stage: 0
+  - name: stage0
     start_layer: 0
     end_layer: 2
 
-  - name: node1
-    stage: 1
+  - name: stage1
     start_layer: 3
     end_layer: 20
 
+  - name: stage2
+    start_layer: 21
+    end_layer: 23
+
+nodes:
+  - name: node0
+    stage: 0
+
+  - name: node1
+    stage: 1
+
   - name: node2
     stage: 2
-    start_layer: 21
-    end_layer: 23
-
-  - name: node3
-    stage: 2
-    start_layer: 21
-    end_layer: 23
-
-    
